bk_ida/gccida/g3/legitimize_pic_address
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/legitimize_pic_address/src/i386.c:5498:4: error: expected ';' after expression
rtx v33; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/legitimize_pic_address/src/i386.c:5498:5: error: use of undeclared identifier 'v33'
rtx v33; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/legitimize_pic_address/src/i386.c:5504:4: error: expected ';' after expression
rtx v39; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/legitimize_pic_address/src/i386.c:5504:5: error: use of undeclared identifier 'v39'
rtx v39; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/legitimize_pic_address/src/i386.c:5512:4: error: expected ';' after expression
rtx v47; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/legitimize_pic_address/src/i386.c:5512:5: error: use of undeclared identifier 'v47'
rtx v47; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/legitimize_pic_address/src/i386.c:5566:33: error: use of undeclared identifier 'machine_mode'
v17 = gen_rtx_fmt_Ei( UNSPEC, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v16, 15); 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/legitimize_pic_address/src/i386.c:5567:31: error: use of undeclared identifier 'machine_mode'
v18 = gen_rtx_fmt_e( CONST, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v17); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/legitimize_pic_address/src/i386.c:5568:22: error: use of undeclared identifier 'machine_mode'
v19 = gen_rtx_MEM( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v18); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/legitimize_pic_address/src/i386.c:5569:7: error: use of undeclared identifier 'set_31'; did you mean 'set_of'?
v20 = set_31; 
      ^~~~~~
      set_of
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/legitimize_pic_address/src/rtl.h:1478:12: note: 'set_of' declared here
extern rtx set_of                       PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/legitimize_pic_address/src/i386.c:5574:1: error: use of undeclared identifier 'set_31'
set_31 = new_alias_set( ); 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/legitimize_pic_address/src/i386.c:5575:7: error: use of undeclared identifier 'set_31'; did you mean 'set_of'?
v20 = set_31; 
      ^~~~~~
      set_of
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/legitimize_pic_address/src/rtl.h:1478:12: note: 'set_of' declared here
extern rtx set_of                       PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/legitimize_pic_address/src/i386.c:5579:22: error: use of undeclared identifier 'machine_mode'
v10 = gen_reg_rtx( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4)); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/legitimize_pic_address/src/i386.c:5587:33: error: use of undeclared identifier 'machine_mode'
v36 = gen_rtx_fmt_Ei( UNSPEC, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v35, 6); 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/legitimize_pic_address/src/i386.c:5588:31: error: use of undeclared identifier 'machine_mode'
v37 = gen_rtx_fmt_e( CONST, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v36); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/legitimize_pic_address/src/i386.c:5589:31: error: use of undeclared identifier 'machine_mode'
v38 = gen_rtx_fmt_ee( PLUS, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), pic_offset_table_rtx, v37); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/legitimize_pic_address/src/i386.c:5590:22: error: use of undeclared identifier 'machine_mode'
v39 = gen_rtx_MEM( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v38); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/legitimize_pic_address/src/i386.c:5590:1: error: use of undeclared identifier 'v39'
v39 = gen_rtx_MEM( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v38); 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/legitimize_pic_address/src/i386.c:5591:7: error: use of undeclared identifier 'set_31'; did you mean 'set_of'?
v40 = set_31; 
      ^~~~~~
      set_of
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/legitimize_pic_address/src/rtl.h:1478:12: note: 'set_of' declared here
extern rtx set_of                       PARAMS ((rtx, rtx));
           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/legitimize_pic_address/src/obj/i386.o] Error 1
